Using ProcessBuilder to mitigate command injection